chore: modify controllers and middleware
