# src/controllers/posts.ts
@@ -1,4 +1,4 @@
-import { PostPayload } from '../models/Posts'
+import { PostComment, PostPayload } from '../models/Posts'
 import {
   Get,
   Route,
@@ -12,9 +12,12 @@ import {
   Path,
 } from 'tsoa'
 import Posts, { PostDocument } from '../models/Posts'
+import mongoose from 'mongoose'
 import cloudinary from '../util/cloudinaryConfig'
 import { getSequenceNextValue } from '../util/getSequenceNextValue'
 import User from '../models/User'
+import { Readable } from 'stream'
+
 @Route('/posts')
 @Tags('Post')
 export class PostController {
@@ -24,37 +27,57 @@ export class PostController {
     @Body() body: PostPayload
   ): Promise<PostResponse | string> {
     try {
+      console.log('Body in controller:', body)
       const { title, description, postedBy } = body
       const imageUrls: string[] = []
-
+      const user = await User.findOne({ id: postedBy })
+      if (!user) {
+        throw {
+          code: 404, // 404 means not found
+          message: 'User not found.',
+        }
+      }
       const files = req.files as Express.Multer.File[]
+      //console.log('file:', files)
+      const uploadPromises = files.map((file: Express.Multer.File) => {
+        return new Promise<string>((resolve, reject) => {
+          const cld_upload_stream = cloudinary.uploader.upload_stream(
+            { folder: 'Posts' },
+            (error: any, result: any) => {
+              if (result && result.secure_url) {
+                resolve(result.secure_url)
+              } else {
+                reject(error)
+              }
+            }
+          )
 
-      const uploadPromises = files.map(async (file: Express.Multer.File) => {
-        const result = await cloudinary.uploader.upload(file.path, {
-          folder: 'Posts',
+          const fileStream = new Readable()
+          fileStream.push(file.buffer)
+          fileStream.push(null)
+
+          fileStream.pipe(cld_upload_stream)
         })
-        imageUrls.push(result.secure_url)
       })
 
-      await Promise.all(uploadPromises)
-
+      // await Promise.all(uploadPromises)
+      const uploadedImageUrls = await Promise.all(uploadPromises)
+      imageUrls.push(...uploadedImageUrls)
       const newPost = new Posts({
         title,
         description,
         images: imageUrls,
         date: new Date(),
-        postedBy: {
-          userId: postedBy.userId,
-          username: postedBy.username,
-          profilePicture: postedBy.profilePicture,
-        },
+        postedBy: user._id,
+        comments: [],
       })
-
+      console.log('New Post', newPost)
       await newPost.save()
       console.log('Posted Successfully')
 
       return 'Posted Successfully'
     } catch (error: any) {
+      console.log(error)
       throw error
     }
   }
@@ -62,7 +85,7 @@ export class PostController {
   @Put('/like')
   public async likePost(
     @Body() body: { pid: number; userId: number }
-  ): Promise<PostResponse> {
+  ): Promise<PostResponse | string> {
     try {
       const { pid, userId } = body
       console.log('Body:', body)
@@ -77,7 +100,7 @@ export class PostController {
         post.likes.push(userId)
         await post.save()
       }
-      return post
+      return 'Post Liked'
     } catch (error: any) {
       throw error
     }
@@ -85,7 +108,7 @@ export class PostController {
   @Put('/unlike')
   public async unlikePost(
     @Body() body: { pid: number; userId: number }
-  ): Promise<PostResponse> {
+  ): Promise<PostResponse | string> {
     try {
       const { pid, userId } = body
       const post = await Posts.findOne({ pid })
@@ -101,19 +124,53 @@ export class PostController {
       }
       await post.save()
 
-      return post
+      return 'Post Unliked'
     } catch (error: any) {
       throw error
     }
   }
+  // @Get('/getall')
+  // public async getAllPosts(
+  //   @Request() req: Express.Request
+  // ): Promise<PostDocument[]> {
+  //   try {
+  //     const postArray: PostDocument[] = await Posts.find().exec()
+  //     console.log(postArray)
+  //     return postArray
+  //   } catch (error) {
+  //     throw error
+  //   }
+  // }
   @Get('/getall')
   public async getAllPosts(
     @Request() req: Express.Request
-  ): Promise<PostDocument[]> {
+  ): Promise<getPostResponse[]> {
     try {
-      const postArray: PostDocument[] = await Posts.find().exec()
-      console.log(postArray)
-      return postArray
+      const posts: PostDocument[] = await Posts.find().exec()
+      const postResponses: getPostResponse[] = []
+
+      for (const post of posts) {
+        const user = await User.findById(post.postedBy).exec()
+
+        if (user) {
+          const postResponse: getPostResponse = {
+            pid: post.pid,
+            title: post.title,
+            description: post.description,
+            images: post.images,
+            user: {
+              userId: user.id,
+              name: user.name,
+              profilePicture: user.profilePicture,
+            },
+          }
+
+          postResponses.push(postResponse)
+        }
+      }
+
+      console.log(postResponses)
+      return postResponses
     } catch (error) {
       throw error
     }
@@ -138,11 +195,7 @@ export class PostController {
     body: {
       pid: number
       text: string
-      commentedBy: {
-        userId: number
-        profilePicture: string
-        username: string
-      }
+      commentedBy: mongoose.Types.ObjectId
     }
   ): Promise<CommentResponse> {
     try {
@@ -165,7 +218,12 @@ export class PostController {
       post.comments.push(comment)
       await post.save()
       console.log({ comments: [comment] })
-      return { comments: [comment] }
+      const commentResponse: CommentResponse = {
+        cid: comment.cid,
+        commentedBy: comment.commentedBy,
+        text: comment.text,
+      }
+      return commentResponse
     } catch (error: any) {
       throw error
     }
@@ -173,7 +231,7 @@ export class PostController {
   @Get('/getcomments')
   public async getComments(
     @Query('postId') postId: number
-  ): Promise<CommentResponse> {
+  ): Promise<CommentResponse[]> {
     try {
       const post: PostDocument | null = await Posts.findOne({ pid: postId })
 
@@ -184,8 +242,13 @@ export class PostController {
         }
       }
 
-      const comments = post.comments
-      return { comments }
+      const comments: CommentResponse[] = post.comments.map((comment) => ({
+        cid: comment.cid,
+        commentedBy: comment.commentedBy,
+        text: comment.text,
+      }))
+
+      return comments
     } catch (error) {
       console.error('Error fetching comments:', error)
       throw error
@@ -203,7 +266,7 @@ export class PostController {
       }
 
       const commentIndex = post.comments.findIndex(
-        (comment) => comment.cid === cid
+        (comment: PostComment) => comment.cid === cid
       )
       if (commentIndex === -1) {
         throw {
@@ -238,8 +301,9 @@ export class PostController {
       }
 
       const commentIndex = post.comments.findIndex(
-        (comment) => comment.cid === cid
+        (comment: PostComment) => comment.cid === cid
       )
+
       if (commentIndex === -1) {
         throw {
           code: 404, // 404 means not found
@@ -251,7 +315,13 @@ export class PostController {
       await post.save()
       console.log('Comment updated successfully')
 
-      return { comments: [post.comments[commentIndex]] }
+      const updatedComment: CommentResponse = {
+        cid: post.comments[commentIndex].cid,
+        commentedBy: post.comments[commentIndex].commentedBy,
+        text: post.comments[commentIndex].text,
+      }
+
+      return updatedComment
     } catch (error: any) {
       throw error
     }
@@ -283,6 +353,7 @@ interface PostResponse {
    * Array of comments on the post
    */
   comments: CommentResponse[]
+  postedBy: mongoose.Types.ObjectId
 }
 interface CommentResponse {
   /**
@@ -294,16 +365,24 @@ interface CommentResponse {
    * User who made the comment
    * @example { userId: "user1", profilePicture: "https://example.com/user1.jpg", username: "user1" }
    */
-  commentedBy: {
-    userId: string
-    profilePicture: string
-    username: string
-  }
+  commentedBy: mongoose.Types.ObjectId
   /**
    * Comment text
    * @example "This is a comment"
    */
   text: string
+}
+interface getPostResponse {
+  pid: number
+  title: string
+  description: string
+  images?: string[]
+
+  user: {
+    userId: number
+    name: string
+    profilePicture: string
+  }
 }
 
 interface FileUpload {
